Archive2/80/2078b790db2a29/output
main.cpp:8:18: error: 'virtual void B::foo() const' marked override, but does not override
     virtual void foo() const override final;
                  ^
